--- a/src/main/webapp/WEB-INFO/views/view.html
+++ b/src/main/webapp/WEB-INFO/views/view.html
@@ -9,6 +9,10 @@
         <button>Add new product</button>
     </a>
 </p>
+<form method="post" style="width: 500px">
+    <input type="text" name="name" placeholder="Enter your name product">
+    <input type="submit" value="Search">
+</form>
 <table id="products">
     <thead>
     <tr>
